--- a/Bio.html
+++ b/Bio.html
@@ -1,10 +1,10 @@
-<img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=300&width=100%&section=header&text=JISU%20KIM&fontSize=90&animation=fadeIn&fontAlignY=38&desc=I%20WILL%20INTRODUCE%20MYSELF🦈%20FOLLOW%20ME!&descAlignY=51&descAlign=62" />
+<img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=300&section=header&text=JISU%20KIM&fontSize=90&animation=fadeIn&fontAlignY=38&desc=I%20WILL%20INTRODUCE%20MYSELF🦈%20FOLLOW%20ME!&descAlignY=51&descAlign=62" />
 
 <br>
 <p align="center"> 안녕하세요!🇰🇷->HELLOW!🇺🇸 </p>
 <p align="center"> This is Jisu Kim </p>
 <p align="center"> Welcome to my personal webpag </p>
-<p style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
+<p align="center" style="font-size:20px;">Bachelor of Science <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor</p>
 
 I enrolled bachelor of science at University of California, San Diego in southern California area since 2019 and this is my last class at UCSD as an undergraduate student! Yea~~
 I born in South Korea, near the city of Seoul. I will introduce my school life in Korea. Here is my short story at korean high school.
@@ -30,4 +30,4 @@ Back in time, I made the early decision to major in STEM in ninth grade, I did n
 </p>
 
 
-<img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=350&section=footer" />
+<img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=350&section=footer" style="width:100%;"/>
