--- a/Bio.html
+++ b/Bio.html
@@ -6,10 +6,6 @@
   
   <div class="split-layout__item">
     <h2 align="center">🛠 Tech Stack 🛠</h2>
-    <p>
-      Welcome to my personal webpage. This is Jisu Kim! I enrolled bachelor of science at University of California, San Diego <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019 and this is my last quarter at UCSD as an undergraduate student!
-    </p>
-    <br>
     <p align="center"> Techs that I've used at least once </p>
     <p align="center">
   <img src="https://img.shields.io/badge/Python-3766AB?style=flat-square&logo=Python&logoColor=white"/>
@@ -22,7 +18,12 @@
   <img src="https://img.shields.io/badge/scikit-learn-F7931E?style=flat-square&logo=scikit-learn&logoColor=white"/>
   <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=flat-square&logo= TensorFlow&logoColor=white"/> 
   <img src="https://img.shields.io/badge/GitHub-181717?style=flat-square&logo= GitHub&logoColor=white"/>
-</p>
+   </p>
+   <br>
+   <img src="Jisu_gradPhoto1.jpg" >
+    <p>
+      Welcome to my personal webpage. This is Jisu Kim! I enrolled bachelor of science at University of California, San Diego <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019 and this is my last quarter at UCSD as an undergraduate student!
+    </p>
   </div>
   
   <div class="split-layout__divider">
