--- a/Bio.html
+++ b/Bio.html
@@ -42,7 +42,9 @@
   
 </div>
 </div>
-  
+
+<!-- test divider: css-->
+<style>
 .split-layout {
   display: flex;
   flex-direction: column;
@@ -99,7 +101,7 @@ html {
   background: #3B4558;
   color: #fff;
 }
-
+</style>
 <br>
 
 <img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=350&section=footer" style="width:100%;"/>
