--- a/Bio.html
+++ b/Bio.html
@@ -20,7 +20,7 @@
   <img src="https://img.shields.io/badge/GitHub-181717?style=flat-square&logo= GitHub&logoColor=white"/>
    </p>
    <br>
-   <img src="Jisu_gradPhoto1.jpg" >
+   <img src="Jisu_gradPhoto1.jpg" style="width:30%;height:30%;">
     <p>
       Welcome to my personal webpage. This is Jisu Kim! I enrolled bachelor of science at University of California, San Diego <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019 and this is my last quarter at UCSD as an undergraduate student!
     </p>
