--- a/Bio.html
+++ b/Bio.html
@@ -22,13 +22,15 @@
    <br>
    <img src="Jisu_gradPhoto1.jpg" style="width:30%;height:30%;">
     <p>
-      Welcome to my personal webpage. This is Jisu Kim! I enrolled bachelor of science at University of California, San Diego <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019 and this is my last quarter at UCSD as an undergraduate student!
+      Welcome to my personal webpage. 
+      This is Jisu Kim! 
+      I enrolled bachelor of science at University of California, San Diego <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019 and this is my last quarter at UCSD as an undergraduate student!
     </p>
   </div>
   
   <div class="split-layout__divider">
     <div class="split-layout__rule"></div>
-    <div class="split-layout__label">Or</div>
+    <div class="split-layout__label">🦈</div>
     <div class="split-layout__rule"></div>
   </div>
   
