--- a/Bio.html
+++ b/Bio.html
@@ -24,7 +24,9 @@
     <p>
       Welcome to my personal webpage. 
       This is Jisu Kim! 
-      I enrolled bachelor of science at University of California, San Diego <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019 and this is my last quarter at UCSD as an undergraduate student!
+      I started bachelor of science degree at University of California, San Diego 
+      <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019.
+      This is my last quarter at UCSD as an undergraduate student!
     </p>
   </div>
   
