--- a/Bio.html
+++ b/Bio.html
@@ -22,10 +22,10 @@
    <br>
    <img src="Jisu_gradPhoto1.jpg" style="width:30%;height:30%;">
     <p>
-      Welcome to my personal webpage. 
-      This is Jisu Kim! 
-      I started bachelor of science degree at University of California, San Diego 
-      <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019.
+      Welcome to my personal webpage.<br>
+      This is Jisu Kim!<br>
+      I started bachelor of science degree at University of California, San Diego.<br>
+      <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019.<br>
       This is my last quarter at UCSD as an undergraduate student!
     </p>
   </div>
