--- a/Bio.html
+++ b/Bio.html
@@ -1,101 +1,36 @@
 <img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=300&section=header&text=JISU%20KIM&fontSize=90&animation=fadeIn&fontAlignY=38&desc=I%20WILL%20INTRODUCE%20MYSELF🦈%20FOLLOW%20ME!&descAlignY=51&descAlign=62" style="width:100%;"/>
 
 <!-- test divider -->
-<div class="wrapper">
-  <div class="split-layout">
-  
-  <div class="split-layout__item">
-    <h2>🛠 Tech Stack 🛠</h2>
-    <p> Techs that I've used at least once </p>
-    <p>
-  <img src="https://img.shields.io/badge/Python-3766AB?style=flat-square&logo=Python&logoColor=white"/>
-  <img src="https://img.shields.io/badge/Java-007396?style=flat-square&logo=Java&logoColor=white"/> 
-  <img src="https://img.shields.io/badge/MySQL-4479A1?style=flat-square&logo= MySQL&logoColor=white"/>
-  <img src="https://img.shields.io/badge/Linux-FCC624?style=flat-square&logo= Linux&logoColor=white"/>
-  <br>
-  <img src="https://img.shields.io/badge/HTML-E34F26?style=flat-square&logo= HTML&logoColor=white"/>
-  <img src="https://img.shields.io/badge/css-1572B6?style=flat-square&logo=css3&logoColor=white"/> 
-  <img src="https://img.shields.io/badge/scikit-learn-F7931E?style=flat-square&logo=scikit-learn&logoColor=white"/>
-  <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=flat-square&logo= TensorFlow&logoColor=white"/> 
-  <img src="https://img.shields.io/badge/GitHub-181717?style=flat-square&logo= GitHub&logoColor=white"/>
-   </p>
-   <br>
-   <img src="Jisu_gradPhoto1.jpg" style="width:30%;height:30%;">
-    <p>
+<div class="container">
+    <div class="side">
       Welcome to my personal webpage.<br>
       This is Jisu Kim!<br>
       I started bachelor of science degree at University of California, San Diego.<br>
       <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019.<br>
-      This is my last quarter at UCSD as an undergraduate student!
-    </p>
-  </div>
-  
-  <div class="split-layout__divider">
-    <div class="split-layout__rule"></div>
-    <div class="split-layout__label">🦈</div>
-    <div class="split-layout__rule"></div>
-  </div>
-  
-  <div class="split-layout__item">
-    <h2>안녕하세요!🇰🇷 ⇨ HELLOW!🇺🇸</h2>
-    <p>
-      I born in South Korea, near the city of Seoul. I will introduce my short story in korean high school.
+      This is my last quarter at UCSD as an undergraduate student!<br>
+      <img src="Jisu_gradPhoto1.jpg" style="width:30%;height:30%;">
+      <br>🛠 Tech Stack 🛠 <br>Techs that I've used at least once <br>
+      <img src="https://img.shields.io/badge/Python-3766AB?style=flat-square&logo=Python&logoColor=white"/>
+      <img src="https://img.shields.io/badge/Java-007396?style=flat-square&logo=Java&logoColor=white"/> 
+      <img src="https://img.shields.io/badge/MySQL-4479A1?style=flat-square&logo= MySQL&logoColor=white"/>
+      <img src="https://img.shields.io/badge/Linux-FCC624?style=flat-square&logo= Linux&logoColor=white"/>
+      <br>
+      <img src="https://img.shields.io/badge/HTML-E34F26?style=flat-square&logo= HTML&logoColor=white"/>
+      <img src="https://img.shields.io/badge/css-1572B6?style=flat-square&logo=css3&logoColor=white"/> 
+      <img src="https://img.shields.io/badge/scikit-learn-F7931E?style=flat-square&logo=scikit-learn&logoColor=white"/>
+      <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=flat-square&logo= TensorFlow&logoColor=white"/> 
+      <img src="https://img.shields.io/badge/GitHub-181717?style=flat-square&logo= GitHub&logoColor=white"/>
+    </div>
+    <div class="or">
+        <div class="or-line"></div>
+        <div class="or-label">🦈</div>
+    </div>
+    <div class="side">
+      안녕하세요!🇰🇷 ⇨ HELLOW!🇺🇸<br>
+      I born in South Korea, near the city of Seoul. I will introduce my short story in korean high school.<br>
       Back in time, I made the early decision to major in STEM in ninth grade, I did not make a boundary between myself and study and experience. I formed a ‘Women in STEM’ club and organized various activities as the vice president and explored diverse scientific experiences while I was in high school. When I was a freshman, I held a presentation in front of the club manager to show how club activities will be beneficial educationally. I successfully persuaded the school to support our plan - this was the first time our school had ever provided financial support for an extracurricular activity of a club. With one presentation, our club was able to conduct scientific research activities using a $3,000 grant per semester. The scientific activities were visiting an observatory and inviting a pharmacology professor to open a class for dreaming students, etc. Apart from this, I have a year-long history of participating in the Crystallization-Contest which was hosted by Seoul National University. Previously, I was limited to do experiments in a laboratory three times a year for each science classes. However by taking advantage of the contest, I could experiment two hours a day every Tuesday and Thursday with an instructor. As a result of my hard work, I got the prize along with a $400 reward from the contest. Although the experiment was about chemistry, and all the activities I did in the club were quite far from my current major, I just hoped to be a practical person based on these experiences, so that I could develop a desire and motivation for study all my life. And I am sure all the activities I have participated in have contributed greatly to my direction of study. With these experiences, I have developed interests in STEM fields(, correlating to computer science). The times were all worthy and valuable seeds to major in STEM.
-    </p>
-  </div>
-  
-</div>
+    </div>
 </div>
 
-<!-- test divider: css-->
-<style>
-.split-layout {
-  display: flex;
-  flex-direction: column;
-  
-  @media screen and (min-width: 30em) {
-    flex-direction: row;
-    align-items: stretch;
-  }
-}
-
-.split-layout__item  {
-  flex: 1;
-  
-  @media screen and (min-width: 30em) {
-    padding-left: 1em;
-    
-    &:first-child {
-    padding: 0;
-    }
-  }
-}
-
-.split-layout__divider {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  
-  @media screen and (min-width: 30em) {
-   flex-direction: column; 
-  }
-}
-
-.split-layout__label {
-  padding: 1em;
-}
-
-.split-layout__rule {
-  flex: 1;
-  border-style: solid;
-  border-color: rgba(255,255,255,.3);
-  border-width: 1px 0 0 0;
-  
-  @media screen and (min-width: 30em) {
-   border-width: 0 1px 0 0;
-  }
-}
-</style>
 <br>
-
 <img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=350&section=footer" style="width:100%;"/>
