--- a/Bio.html
+++ b/Bio.html
@@ -1,5 +1,43 @@
 <img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=300&section=header&text=JISU%20KIM&fontSize=90&animation=fadeIn&fontAlignY=38&desc=I%20WILL%20INTRODUCE%20MYSELF🦈%20FOLLOW%20ME!&descAlignY=51&descAlign=62" style="width:100%;"/>
 
+<!DOCTYPE html>
+<html>
+<style>
+.container {
+    padding: 1em;
+}
+.side, .or {
+    float: left;
+    height: 6em;
+    text-align: center;
+}
+.side {
+    width: 40%;
+}
+.or {
+    position: relative;
+    width: 20%;
+}
+.or-line {
+    float: left;
+    width: 50%;   
+    border-right: 1px solid #aaa;
+    height: 6em;
+}
+.or-label {
+    background: #fff;
+    color: #aaa;
+    height: 1em;
+    left: 50%;
+    margin-left: -1.25em;
+    margin-top: 2em;
+    padding: .5em;
+    position: absolute;
+    text-transform: uppercase;
+    width: 1em;
+}
+</style
+>
 <!-- test divider -->
 <div class="container">
     <div class="side">
@@ -33,4 +71,6 @@
 </div>
 
 <br>
+</html>
+
 <img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=350&section=footer" style="width:100%;"/>
