--- a/Bio.html
+++ b/Bio.html
@@ -41,8 +41,8 @@
 <!-- test divider -->
 <div class="container">
     <div class="side">
-      Welcome to my personal webpage.<br>
       This is Jisu Kim!<br>
+      Welcome to my personal webpage.<br>
       I started bachelor of science degree at University of California, San Diego.<br>
       <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a> major & <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> minor since 2019.<br>
       This is my last quarter at UCSD as an undergraduate student!<br>
@@ -65,12 +65,37 @@
     </div>
     <div class="side">
       안녕하세요!🇰🇷 ⇨ HELLOW!🇺🇸<br>
-      I born in South Korea, near the city of Seoul. I will introduce my short story in korean high school.<br>
+      I born in South Korea, near the city of Seoul.<br>
+      I will introduce my short story in korean high school.<br>
       Back in time, I made the early decision to major in STEM in ninth grade, I did not make a boundary between myself and study and experience. I formed a ‘Women in STEM’ club and organized various activities as the vice president and explored diverse scientific experiences while I was in high school. When I was a freshman, I held a presentation in front of the club manager to show how club activities will be beneficial educationally. I successfully persuaded the school to support our plan - this was the first time our school had ever provided financial support for an extracurricular activity of a club. With one presentation, our club was able to conduct scientific research activities using a $3,000 grant per semester. The scientific activities were visiting an observatory and inviting a pharmacology professor to open a class for dreaming students, etc. Apart from this, I have a year-long history of participating in the Crystallization-Contest which was hosted by Seoul National University. Previously, I was limited to do experiments in a laboratory three times a year for each science classes. However by taking advantage of the contest, I could experiment two hours a day every Tuesday and Thursday with an instructor. As a result of my hard work, I got the prize along with a $400 reward from the contest. Although the experiment was about chemistry, and all the activities I did in the club were quite far from my current major, I just hoped to be a practical person based on these experiences, so that I could develop a desire and motivation for study all my life. And I am sure all the activities I have participated in have contributed greatly to my direction of study. With these experiences, I have developed interests in STEM fields(, correlating to computer science). The times were all worthy and valuable seeds to major in STEM.
     </div>
 </div>
 
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    
 </html>
 
 <img src="https://capsule-render.vercel.app/api?type=waving&color=auto&height=350&section=footer" style="width:100%;"/>
