--- a/Bio.html
+++ b/Bio.html
@@ -3,6 +3,9 @@
 
 <html>
 <style>
+html * {
+        font-family: verdana;
+      }
 .container {
     padding: 1em;
 }
@@ -36,8 +39,8 @@
     text-transform: uppercase;
     width: 1em;
 }
-</style
->
+</style>
+
 <!-- test divider -->
 <div class="container">
     <div class="side">
