--- a/Bio.html
+++ b/Bio.html
@@ -48,7 +48,7 @@ html * {
       Welcome to my personal webpage.<br>
       I major in <a href="https://cogsci.ucsd.edu/undergraduates/major/machine-learning.html" style="color: #5396d9" target="_blank" title="UCSD'cogs Website">Cognitive Science - Machine Learning and Neural Computation</a>, minor in <a href="https://www.ucsd.edu/catalog/curric/MATH-ug.html" style="color: #5396d9" target="_blank" title="UCSD'math Website">Mathematics</a> at University of California, San Diego.<br>
       This is my last quarter at UCSD as an undergraduate student!<br>
-      <img src="Jisu_gradPhoto1.jpg" style="width:100%;height:400px;">
+      <img src="Jisu_gradPhoto1.jpg" style="width:220px;height:400px;">
       <br>
       <br>🛠 Tech Stack 🛠 
       <br>Techs that I have used at least once
