--- a/Bio.html
+++ b/Bio.html
@@ -66,7 +66,7 @@ html * {
     </div>
     <div class="or">
         <div class="or-line"></div>
-        <div class="or-label">🦈</div>
+        <div class="or-label">🐳</div>
     </div>
     <div class="side">
       🇰🇷안녕하세요!🇰🇷 ⇨ 🇺🇸HELLOW!🇺🇸<br>
